--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    
-
+    <h1>Custom Video Player</h1>
+    <video src="videos/gone.mp4" id="video" class="screen" poster="img/poster_play.png"></video>
+    <div class="controls">
+      <button class="btn" id="play">
+        <i class="fa fa-play-circle-o fa-2x"></i>
+      </button>
+      <button class="btn" id="stop">
+        <i class="fa fa-stop-circle-o fa-2x"></i>
+      </button>
+      <button class="btn" id="stop">
+        <i class="fa fa-repeat fa-2x"></i>
+      </button>
+      <input 
+        type="range" 
+        id="progress" 
+        class="progress" 
+        min="0" 
+        max="100" 
+        step="0.1" 
+        value="0" 
+        />
+      <span class="timestamp" id="timestamp">00:00</span>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
