--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="css/progress.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="#" type="image/x-icon">
   </head>
   <body>
     <h1>Custom Video Player</h1>
@@ -24,7 +25,7 @@
       <button class="btn" id="stop">
         <i class="fa fa-stop-circle-o fa-2x"></i>
       </button>
-      <button class="btn" id="stop">
+      <button class="btn" id="replay">
         <i class="fa fa-repeat fa-2x"></i>
       </button>
       <input 
