--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>Custom Video Player</h1>
-    <video src="videos/gone.mp4" id="video" class="screen" poster="img/poster_play.png"></video>
+    <video src="videos/pexels_videos_sample.mp4" id="video" class="screen" poster="img/poster_play.png"></video>
     <div class="controls">
       <button class="btn" id="play">
         <i class="fa fa-play-circle-o fa-2x"></i>
